[gd_scene load_steps=16 format=2]

[ext_resource path="res://levels/tutorial/01/Level0-1.gd" type="Script" id=1]
[ext_resource path="res://entities/map/Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/level/PlayerSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/slider/Slider.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/tutorial/01/slides/ArgumentsSlide.tscn" type="PackedScene" id=5]
[ext_resource path="res://levels/tutorial/01/lightmap/lightmap.lmbake" type="BakedLightmapData" id=6]
[ext_resource path="res://entities/doors/DoorSingle.tscn" type="PackedScene" id=10]
[ext_resource path="res://entities/computer/Computer.tscn" type="PackedScene" id=11]
[ext_resource path="res://entities/doors/Door.tscn" type="PackedScene" id=12]
[ext_resource path="res://entities/button/ButtonItem.tscn" type="PackedScene" id=13]
[ext_resource path="res://entities/screen/WideScreen.tscn" type="PackedScene" id=14]
[ext_resource path="res://levels/tutorial/01/info.tres" type="Resource" id=15]

[sub_resource type="GDScript" id=3]
script/source = "extends Door


"

[sub_resource type="GDScript" id=4]
script/source = "extends WallButton


# The door instance
var door = getObject(\"Door\")


# Called when the button is pressed
func onButtonPressed():
	# Use the open(\"password\") method on the door here
	# The password must be somewhere in this room
	
	pass # End of the function
"

[sub_resource type="BoxShape" id=5]
extents = Vector3( 2, 2, 0.1 )

[node name="Level0-1" type="Spatial"]
script = ExtResource( 1 )
level_info = ExtResource( 15 )
slider = NodePath("Slider")
map = NodePath("Map")
spawner = NodePath("PlayerSpawner")

[node name="Slider" parent="." instance=ExtResource( 4 )]
slide_scenes = [ ExtResource( 5 ) ]
disable_focus_when_hidden = false

[node name="Map" parent="." instance=ExtResource( 2 )]
data = {
"cells": PoolIntArray( 5, 0, 538312736, 65529, 0, 537919520, 0, 1, 537919492, 2, 1, 537919488, 4, 1, 537526277, 65530, 1, 536870917, 65532, 1, 537919488, 65534, 1, 537919492, 262144, 1, 538181656, 262146, 1, 537395225, 262148, 1, 537395225, 327674, 1, 537395225, 327676, 1, 537395225, 327678, 1, 538181655, 5, 2, 538312714, 65529, 2, 537919498, 0, 3, 537526278, 2, 3, 537919493, 3, 3, 537526312, 4, 3, 537526274, 65530, 3, 537919490, 65531, 3, 537526312, 65532, 3, 537919493, 65534, 3, 537919494, 262144, 3, 537395225, 262146, 3, 537395225, 262148, 3, 537395225, 327674, 3, 537395225, 327676, 3, 537395225, 327678, 3, 537395225, 1, 4, 537526302, 3, 4, 537526279, 5, 4, 536870943, 65529, 4, 536870943, 65531, 4, 537526279, 65533, 4, 537526302, 0, 5, 537526275, 262144, 5, 537395225, 327678, 5, 537395225, 1, 6, 538312721, 65533, 6, 537919502, 0, 7, 537526275, 262144, 7, 537002003, 327678, 7, 538050579, 1, 8, 537526305, 65533, 8, 537526305, 65535, 8, 537526309, 65535, 9, 537526314, 65537, 65522, 536870945, 131069, 65522, 536870945, 131071, 65522, 536870949, 131070, 65523, 536870915, 327680, 65523, 537395225, 393214, 65523, 537395225, 65537, 65524, 538312711, 131069, 65524, 537919495, 131070, 65525, 536870915, 327680, 65525, 537395225, 393214, 65525, 537395225, 65537, 65526, 538312734, 131069, 65526, 538312734, 131071, 65526, 536870928, 327680, 65526, 537788435, 393214, 65526, 537722899, -196607, 65526, 536870942, -131075, 65526, 536870942, 65534, 65527, 536870915, 262144, 65527, 537395225, 327678, 65527, 537395225, 1, 65528, 538312711, 65533, 65528, 537919495, 65534, 65529, 536870915, 262144, 65529, 537395225, 327678, 65529, 537395225, 1, 65530, 536870945, 65533, 65530, 536870945, 65535, 65530, 537526307, 1, 65532, 537526305, 3, 65532, 536870927, 5, 65532, 536870943, 65529, 65532, 536870943, 65531, 65532, 536870927, 65533, 65532, 537526305, 65535, 65532, 536870948, 0, 65533, 538312709, 2, 65533, 538312709, 4, 65533, 538312706, 65530, 65533, 536870914, 65532, 65533, 538312709, 65534, 65533, 538312709, 262144, 65533, 537395225, 262146, 65533, 537395225, 262148, 65533, 537395225, 327674, 65533, 537395225, 327676, 65533, 537395225, 327678, 65533, 537395225, 5, 65534, 538312714, 65529, 65534, 537919498, 0, 65535, 537919492, 2, 65535, 537919488, 4, 65535, 537526277, 65530, 65535, 536870917, 65532, 65535, 537919488, 65534, 65535, 537919492, 262144, 65535, 538181655, 262146, 65535, 537395225, 262148, 65535, 537395225, 327674, 65535, 537395225, 327676, 65535, 537395225, 327678, 65535, 538181656 )
}

[node name="PlayerSpawner" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 2, 7.5 )

[node name="BakedLightmap" type="BakedLightmap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 2.25292, -2.47195 )
extents = Vector3( 7.5, 5.5, 13.6841 )
quality = 0
use_hdr = false
use_color = false
capture_quality = 0
light_data = ExtResource( 6 )

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 3, 1.5 )
omni_range = 10.0

[node name="OmniLight2" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 3.5, -9.5 )
omni_range = 8.0

[node name="Door" parent="." instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0.5, -4 )
code = SubResource( 3 )
display_name = "Door"
description = "Open this door to exit"
is_programmable = true
locked = true

[node name="Computer" parent="." instance=ExtResource( 11 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.586868, 0.5, 0.565752 )
display_name = "Computer"
description = "Use this computer to program objects"
is_interactable = true
interaction_message = "Use"

[node name="DoorSingle" parent="." instance=ExtResource( 10 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.5, 1.5, -14.5 )
display_name = "ExitDoor"
description = "Open to complete the level"
is_interactable = true
interaction_message = "Open"

[node name="Button" parent="." instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 2, -3.14175 )
code = SubResource( 4 )
display_name = "Button"
description = "Try to program this button"
is_programmable = true
is_interactable = true
interaction_message = "Press"
connect_pressed = true

[node name="PasswordScreen" parent="." instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 3.64932, -3.66559 )
display_name = "Screen"
description = "Displays a string. You may need it to open the door"

[node name="DiscoverTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DialogTrigger" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 3.5 )

[node name="CollisionShape" type="CollisionShape" parent="DialogTrigger"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0.5 )
shape = SubResource( 5 )

[connection signal="hidden" from="Slider" to="." method="_on_Slider_hidden"]
[connection signal="opened" from="Door" to="." method="_on_Door_opened"]
[connection signal="interact" from="DoorSingle" to="." method="_on_DoorSingle_interact"]
[connection signal="value_changed" from="PasswordScreen" to="." method="_on_PasswordScreen_value_changed"]
[connection signal="timeout" from="DiscoverTimer" to="." method="_on_DiscoverTimer_timeout"]
[connection signal="body_entered" from="DialogTrigger" to="." method="_on_DialogTrigger_body_entered"]
